# repo-analyzer

./: .gitignore  .repo-analyzer.yml  Makefile  README.md  action.yml  pyproject.toml  requirements.txt
.github/workflows/: action-selftest.yml  ci.yml
hooks/: pre-push
src/: analyzer.py  dependency_scanner.py  docker_scanner.py  github_api.py  html_reporter.py  main.py  osv_fallback.py  reporter.py  score_calculator.py  security.py  todo  trivy_api.py  vulnerability_merger.py
src/repo_analyzer/: __init__.py  __main__.py  cli.py  config.py  report.py
src/repo_analyzer/core/: __init__.py  finding.py  merger.py  scorer.py
src/repo_analyzer/reporters/: __init__.py  _common.py  html.py  json_report.py  markdown.py  sarif.py
src/repo_analyzer/runners/: __init__.py  actionlint.py  base.py  checkov.py  gitleaks.py  grype.py  hadolint.py  scorecard.py  trivy.py  zizmor.py
tests/: test_cli.py  test_config.py  test_finding.py  test_m2_runners.py  test_m4_runners.py  test_merger.py  test_reporters.py  test_scorecard_runner.py  test_scorer.py  test_trivy_runner.py
tests/fixtures/critical-app/: Dockerfile  main.tf  requirements.txt
tests/fixtures/demo-app/: Dockerfile  app.env  deployment.yaml  main.tf  requirements.txt
tests/fixtures/demo-app/.github/workflows/: bad.yml
tests/fixtures/vulnerable-iac/: main.tf
