[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-analyzer"
dynamic = ["version"]
description = "DevSecOps CI gate: orchestrates Trivy, Checkov, gitleaks, grype and hadolint across IaC, Container, Dependencies and Secrets into one scored, gating report (SARIF/Markdown/HTML/JSON)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Arthur Bernard", email = "arthurbernard.dev@gmail.com" }]
keywords = ["devsecops", "security", "iac", "sarif", "ci", "gate"]
urls = { Homepage = "https://github.com/TuroTheReal/repo-analyzer", Repository = "https://github.com/TuroTheReal/repo-analyzer" }
dependencies = [
  "rich>=13.7",
  "pyyaml>=6.0",
  "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
repo-analyzer = "repo_analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "repo_analyzer.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
